Implement cloud analysis with API-based storage management
Adds Hume AI emotion analysis and Memories.ai VLM integration to provide post-session behavioral insights. Cloud storage manager now queries provider APIs directly instead of relying on database records, ensuring accurate visibility into actual cloud storage state and enabling proper deletion workflows.

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -17,6 +17,11 @@
   "queue_max_size": 100,
   "session_auto_save_interval_sec": 60,
   "camera_index": -1,
-  "camera_name": "Auto-detect (FaceTime HD)"
+  "camera_name": "Auto-detect (FaceTime HD)",
+  "cloud_features_enabled": false,
+  "hume_ai_enabled": false,
+  "memories_ai_enabled": false,
+  "hume_ai_auto_upload": false,
+  "memories_ai_auto_upload": false
 }
 
