Add Focus Duration Analyzer and comprehensive features
- Implement Optimal Focus Duration Recommender based on past distraction patterns
- Add focus_duration_analyzer.py with statistical analysis of historical data
- Lower alert threshold from 30s to 10s for better distraction detection
- Add comprehensive logging for agent features and permission checks
- Enhance UI with dark theme, animations, and recommendation display
- Add macOS Accessibility permission utilities with error handling
- Add database queries for first distraction time analysis
- Update README with project overview, team intro, tech stack, sponsor integrations
- Add documentation files for focus analyzer, agent features, UI improvements
- Improve session manager with focus duration recommendations
- Add configuration for focus analyzer settings

--- a/config/default_config.json
+++ b/config/default_config.json
@@ -13,5 +13,15 @@
   "hume_ai_enabled": false,
   "memories_ai_enabled": false,
   "hume_ai_auto_upload": false,
-  "memories_ai_auto_upload": false
+  "memories_ai_auto_upload": false,
+  "agent_close_app_enabled": false,
+  "agent_close_app_consecutive_distractions": 2,
+  "agent_close_app_window_sec": 60,
+  "agent_close_scope": "frontmost",
+  "agent_close_blocklist": [],
+  "agent_close_prompt_countdown_sec": 0,
+  "focus_analyzer_enabled": true,
+  "focus_analyzer_min_sessions": 3,
+  "focus_analyzer_lookback_days": 30,
+  "focus_analyzer_recommendation_factor": 0.75
 }
